2009-10-24  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl, unix/tkUnixButton.c (TkpDisplayButton):
	[Patch 1530276]: Make -selectcolor handling work better for both
	checkbuttons and radiobuttons when they don't have indicators.

2009-10-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (CreateWidget, TextEditUndo, TextEditRedo)
	(TextEditCmd, UpdateDirtyFlag): 
	* generic/tkText.h: [Patch 1469210]: Corrected handling of marking as
	dirty when inserting after an undo from a non-dirty state.

	* win/tkWinDialog.c (GetFileNameA): Make the handling of the filter
	index the same as in GetFileNameW.

	* library/tkfbox.tcl (::tk::dialog::file::, Done): 
	* library/xmfbox.tcl (MotifFDialog_FileTypes)
	(MotifFDialog_ActivateSEnt): 
	* macosx/tkMacOSXDialog.c (Tk_GetOpenFileObjCmd): 
	* win/tkWinDialog.c (GetFileNameW, GetFileNameA): 
	* doc/getOpenFile.n: [Patch 2168768]: Corrected handling of the
	-typevariable option to be consistently global; it's the only way it
	can work even close to the same on all platforms.

	* macosx/ttkMacOSXTheme.c (RangeToFactor): [Bug 2883712]: Factor out
	some common code and make sure that it is 64-bit correct.

2009-10-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:	[Bug 2875562]: Make sure that winMain.c and
	* win/winMain.c:	tkAppInit.c are never compiled with stubs.
	* unix/tkAppInit.c:

2009-10-20  Don Porter  <dgp@users.sourceforge.net>

	* unix/Makefile.in:	Compiling Tk no longer requires header files
	* win/Makefile.in:	from the TCL_PLATFORM DIR.  Baby step in
	pursuit of [Bug 1712098].  Also removed the long outdated and broken
	targets package-* that were for building Solaris packages.  Appears
	that the pieces needed for these targets to function have never been
	present in the current era of Tcl development and belong completely
	to Tcl pre-history.

2009-10-20  Andreas Kupries  <andreask@activestate.com>

	* library/msgs/pl.msg: Applied patch to Polish message catalog created